[package]
name = "aoc2021"
version = "0.1.0"
authors = ["David Szotten <davidszotten@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = "*"
# cached = "*"
clap = "*"
itertools = "*"
lazy_static = "*"
# md-5 = "*"
# num = "*"
# permutohedron = "*"
pest = "*"
pest_derive = "*"
regex = "*"
reduce = "*"
